# agent_summit_bazel_workshop

./: .gitignore  MODULE.bazel  README.md  demo.sh  go.mod
cmd/: BUILD.bazel  main.go
internal/testutils/: BUILD.bazel  fixtures.go  mocks.go
pkg/models/: BUILD.bazel  common.go  stock.go  weather.go
pkg/server/: BUILD.bazel  handlers.go  middleware.go  router.go  server.go
pkg/stock/: BUILD.bazel  client.go  client_test.go  demo.go  service.go  service_test.go
pkg/weather/: BUILD.bazel  client.go  client_test.go  geocode.go  geocode_test.go  service.go  service_test.go
