bazel_dep(name = "rules_go", version = "0.57.0")
bazel_dep(name = "gazelle", version = "0.45.0")


# Bazel can manage toolchains and SDKs for us.
# This way we don't need to manually install the Go SDK
# and we ensure that all users have the same version of the Go SDK.
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")

# Setting Go SDK version.
# Alternative ways to set Go SDK can be found here:
# https://github.com/bazel-contrib/rules_go/blob/master/docs/go/core/bzlmod.md
go_sdk.download(version = "1.24.4")
