load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "cmd_lib",
    srcs = ["main.go"],
    importpath = "github.com/JSGette/agent_summit_bazel_workshop/cmd",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/server",
        "//pkg/stock",
        "//pkg/weather",
    ],
)

go_binary(
    name = "cmd",
    embed = [":cmd_lib"],
    visibility = ["//visibility:public"],
)
