load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "weather",
    srcs = [
        "client.go",
        "geocode.go",
        "service.go",
    ],
    importpath = "github.com/JSGette/agent_summit_bazel_workshop/pkg/weather",
    visibility = ["//visibility:public"],
    deps = ["//pkg/models"],
)

go_test(
    name = "weather_test",
    srcs = [
        "client_test.go",
        "geocode_test.go",
        "service_test.go",
    ],
    embed = [":weather"],
    deps = [
        "//internal/testutils",
        "//pkg/models",
    ],
)
